--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@ui5/webcomponents-fiori": "~1.11.0",
     "@ui5/webcomponents-icons": "~1.11.0",
     "@ui5/webcomponents-react": "^1.10.0",
+    "axios": "^1.3.4",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.58.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
